operator/config/samples/gateway/epp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-mistral-epp
spec:
  selector:
    app: vllm-mistral-epp
  ports:
    - port: 9002
      targetPort: 9002
