operator/config/samples/gateway/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inference-gateway
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: inference-gateway
